--- a/New-PySide-Confindr-GUI/GUI_BASE.ui
+++ b/New-PySide-Confindr-GUI/GUI_BASE.ui
@@ -1572,7 +1572,7 @@ QPushButton:pressed {
                    <string notr="true">background: transparent;</string>
                   </property>
                   <property name="currentIndex">
-                   <number>1</number>
+                   <number>2</number>
                   </property>
                   <widget class="QWidget" name="page_home">
                    <layout class="QVBoxLayout" name="verticalLayout_10">
@@ -3307,7 +3307,7 @@ QHeaderView::section:vertical
                           <bool>false</bool>
                          </property>
                          <property name="selectionMode">
-                          <enum>QAbstractItemView::SingleSelection</enum>
+                          <enum>QAbstractItemView::MultiSelection</enum>
                          </property>
                          <property name="selectionBehavior">
                           <enum>QAbstractItemView::SelectRows</enum>
@@ -3331,7 +3331,7 @@ QHeaderView::section:vertical
                           <number>200</number>
                          </attribute>
                          <attribute name="horizontalHeaderStretchLastSection">
-                          <bool>true</bool>
+                          <bool>false</bool>
                          </attribute>
                          <attribute name="verticalHeaderVisible">
                           <bool>false</bool>
@@ -3343,7 +3343,7 @@ QHeaderView::section:vertical
                           <bool>false</bool>
                          </attribute>
                          <attribute name="verticalHeaderStretchLastSection">
-                          <bool>true</bool>
+                          <bool>false</bool>
                          </attribute>
                          <row>
                           <property name="text">
